Fix color/readability issues on the services page

--- a/_includes/css/wndx.scss
+++ b/_includes/css/wndx.scss
@@ -13,27 +13,11 @@ body.blog { padding-top: 90px; }
 }
 
 .not-home header {
-  background-image: none;
-  //position: relative;
-  //overflow: hidden;
+    background-image: url('{{ site.baseurl }}/img/sunset-train.jpg');
 }
-.not-home header:after {
-  background-image: url('{{ site.baseurl }}/img/sunset-train.jpg');
-  background-repeat: no-repeat;
-  //background-position: 40% 0;
-  -ms-background-size: cover;
-  -o-background-size: cover;
-  -moz-background-size: cover;
-  -webkit-background-size: cover;
-  background-size: cover;
-  content: " ";
-  opacity: 0.8;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  z-index: -1;
+
+.not-home header .intro-text {
+    background-color: rgba(22, 22, 22, 0.5);
 }
 
 @media(min-width:768px) {
